@@ -15,38 +15,41 @@
  */
 package com.android.internal.telephony;
 
+import static android.telephony.CarrierConfigManager.KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY;
+import static android.telephony.CarrierConfigManager.KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY;
+
+import android.annotation.Nullable;
 import android.content.ActivityNotFoundException;
-import android.content.BroadcastReceiver;
 import android.content.ComponentName;
-import android.content.Context;
 import android.content.Intent;
-import android.content.IntentFilter;
 import android.content.pm.PackageManager;
 import android.net.ConnectivityManager;
 import android.net.Network;
 import android.os.AsyncResult;
+import android.os.Build;
 import android.os.Handler;
 import android.os.Message;
 import android.os.PersistableBundle;
+import android.os.UserHandle;
 import android.telephony.CarrierConfigManager;
-import android.telephony.Rlog;
+import android.telephony.SubscriptionManager;
+import android.telephony.TelephonyManager;
+import android.telephony.data.ApnSetting;
 import android.text.TextUtils;
 import android.util.LocalLog;
 import android.util.Log;
 
-import com.android.internal.util.ArrayUtils;
+import com.android.internal.telephony.util.ArrayUtils;
 import com.android.internal.util.IndentingPrintWriter;
+import com.android.telephony.Rlog;
 
 import java.io.FileDescriptor;
 import java.io.PrintWriter;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
-
-import static android.telephony.CarrierConfigManager.KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY;
-import static android.telephony.CarrierConfigManager.KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY;
+import java.util.stream.Collectors;
 
 /**
  * This class act as an CarrierSignalling Agent.
@@ -95,34 +98,45 @@ public class CarrierSignalAgent extends Handler {
     /**
      * This is a list of supported signals from CarrierSignalAgent
      */
-    private final Set<String> mCarrierSignalList = new HashSet<>(Arrays.asList(
-            TelephonyIntents.ACTION_CARRIER_SIGNAL_PCO_VALUE,
-            TelephonyIntents.ACTION_CARRIER_SIGNAL_REDIRECTED,
-            TelephonyIntents.ACTION_CARRIER_SIGNAL_REQUEST_NETWORK_FAILED,
-            TelephonyIntents.ACTION_CARRIER_SIGNAL_RESET,
-            TelephonyIntents.ACTION_CARRIER_SIGNAL_DEFAULT_NETWORK_AVAILABLE));
+    private static final Set<String> VALID_CARRIER_SIGNAL_ACTIONS = Set.of(
+            TelephonyManager.ACTION_CARRIER_SIGNAL_PCO_VALUE,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_REDIRECTED,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_REQUEST_NETWORK_FAILED,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_RESET,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_DEFAULT_NETWORK_AVAILABLE);
 
-    private final LocalLog mErrorLocalLog = new LocalLog(20);
+    private static final Map<String, String> NEW_ACTION_TO_COMPAT_MAP = Map.of(
+            TelephonyManager.ACTION_CARRIER_SIGNAL_PCO_VALUE,
+                    TelephonyIntents.ACTION_CARRIER_SIGNAL_PCO_VALUE,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_REDIRECTED,
+                    TelephonyIntents.ACTION_CARRIER_SIGNAL_REDIRECTED,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_REQUEST_NETWORK_FAILED,
+                    TelephonyIntents.ACTION_CARRIER_SIGNAL_REQUEST_NETWORK_FAILED,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_RESET,
+                    TelephonyIntents.ACTION_CARRIER_SIGNAL_RESET,
+            TelephonyManager.ACTION_CARRIER_SIGNAL_DEFAULT_NETWORK_AVAILABLE,
+                    TelephonyIntents.ACTION_CARRIER_SIGNAL_DEFAULT_NETWORK_AVAILABLE);
 
-    private final BroadcastReceiver mReceiver = new BroadcastReceiver() {
-        public void onReceive(Context context, Intent intent) {
-            String action = intent.getAction();
-            if (DBG) log("CarrierSignalAgent receiver action: " + action);
-            if (action.equals(CarrierConfigManager.ACTION_CARRIER_CONFIG_CHANGED)) {
-                loadCarrierConfig();
-            }
-        }
-    };
+    private static final Map<String, String> COMPAT_ACTION_TO_NEW_MAP = NEW_ACTION_TO_COMPAT_MAP
+            .entrySet().stream().collect(Collectors.toMap(Map.Entry::getValue, Map.Entry::getKey));
+
+    private final LocalLog mErrorLocalLog = new LocalLog(16);
 
     private ConnectivityManager.NetworkCallback mNetworkCallback;
 
     /** Constructor */
     public CarrierSignalAgent(Phone phone) {
         mPhone = phone;
+        CarrierConfigManager carrierConfigManager = mPhone.getContext().getSystemService(
+                CarrierConfigManager.class);
         loadCarrierConfig();
-        // reload configurations on CARRIER_CONFIG_CHANGED
-        mPhone.getContext().registerReceiver(mReceiver,
-                new IntentFilter(CarrierConfigManager.ACTION_CARRIER_CONFIG_CHANGED));
+        carrierConfigManager.registerCarrierConfigChangeListener(
+                mPhone.getContext().getMainExecutor(),
+                (slotIndex, subId, carrierId, specificCarrierId) -> {
+                    if (slotIndex == mPhone.getPhoneId()) {
+                        loadCarrierConfig();
+                    }
+                });
         mPhone.getCarrierActionAgent().registerForCarrierAction(
                 CarrierActionAgent.CARRIER_ACTION_REPORT_DEFAULT_NETWORK_STATUS, this,
                 EVENT_REGISTER_DEFAULT_NETWORK_AVAIL, null, false);
@@ -137,8 +151,8 @@ public class CarrierSignalAgent extends Handler {
                     Rlog.e(LOG_TAG, "Register default network exception: " + ar.exception);
                     return;
                 }
-                final ConnectivityManager connectivityMgr =  ConnectivityManager
-                        .from(mPhone.getContext());
+                final ConnectivityManager connectivityMgr = mPhone.getContext()
+                        .getSystemService(ConnectivityManager.class);
                 if ((boolean) ar.result) {
                     mNetworkCallback = new ConnectivityManager.NetworkCallback() {
                         @Override
@@ -146,10 +160,10 @@ public class CarrierSignalAgent extends Handler {
                             // an optimization to avoid signaling on every default network switch.
                             if (!mDefaultNetworkAvail) {
                                 if (DBG) log("Default network available: " + network);
-                                Intent intent = new Intent(TelephonyIntents
+                                Intent intent = new Intent(TelephonyManager
                                         .ACTION_CARRIER_SIGNAL_DEFAULT_NETWORK_AVAILABLE);
                                 intent.putExtra(
-                                        TelephonyIntents.EXTRA_DEFAULT_NETWORK_AVAILABLE_KEY, true);
+                                        TelephonyManager.EXTRA_DEFAULT_NETWORK_AVAILABLE, true);
                                 notifyCarrierSignalReceivers(intent);
                                 mDefaultNetworkAvail = true;
                             }
@@ -157,10 +171,10 @@ public class CarrierSignalAgent extends Handler {
                         @Override
                         public void onLost(Network network) {
                             if (DBG) log("Default network lost: " + network);
-                            Intent intent = new Intent(TelephonyIntents
+                            Intent intent = new Intent(TelephonyManager
                                     .ACTION_CARRIER_SIGNAL_DEFAULT_NETWORK_AVAILABLE);
                             intent.putExtra(
-                                    TelephonyIntents.EXTRA_DEFAULT_NETWORK_AVAILABLE_KEY, false);
+                                    TelephonyManager.EXTRA_DEFAULT_NETWORK_AVAILABLE, false);
                             notifyCarrierSignalReceivers(intent);
                             mDefaultNetworkAvail = false;
                         }
@@ -184,45 +198,47 @@ public class CarrierSignalAgent extends Handler {
      * load carrier config and cached the results into a hashMap action -> array list of components.
      */
     private void loadCarrierConfig() {
-        CarrierConfigManager configManager = (CarrierConfigManager) mPhone.getContext()
-                .getSystemService(Context.CARRIER_CONFIG_SERVICE);
-        PersistableBundle b = null;
-        if (configManager != null) {
-            b = configManager.getConfig();
+        PersistableBundle b =
+                CarrierConfigManager.getCarrierConfigSubset(
+                        mPhone.getContext(),
+                        mPhone.getSubId(),
+                        KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY,
+                        KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY);
+        if (b.isEmpty()) {
+            return;
         }
-        if (b != null) {
-            synchronized (mCachedWakeSignalConfigs) {
-                log("Loading carrier config: " + KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY);
-                Map<String, Set<ComponentName>> config = parseAndCache(
-                        b.getStringArray(KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY));
-                // In some rare cases, up-to-date config could be fetched with delay and all signals
-                // have already been delivered the receivers from the default carrier config.
-                // To handle this raciness, we should notify those receivers (from old configs)
-                // and reset carrier actions. This should be done before cached Config got purged
-                // and written with the up-to-date value, Otherwise those receivers from the
-                // old config might lingers without properly clean-up.
-                if (!mCachedWakeSignalConfigs.isEmpty()
-                        && !config.equals(mCachedWakeSignalConfigs)) {
-                    if (VDBG) log("carrier config changed, reset receivers from old config");
-                    mPhone.getCarrierActionAgent().sendEmptyMessage(
-                            CarrierActionAgent.CARRIER_ACTION_RESET);
-                }
-                mCachedWakeSignalConfigs = config;
-            }
 
-            synchronized (mCachedNoWakeSignalConfigs) {
-                log("Loading carrier config: "
-                        + KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY);
-                Map<String, Set<ComponentName>> config = parseAndCache(
-                        b.getStringArray(KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY));
-                if (!mCachedNoWakeSignalConfigs.isEmpty()
-                        && !config.equals(mCachedNoWakeSignalConfigs)) {
-                    if (VDBG) log("carrier config changed, reset receivers from old config");
-                    mPhone.getCarrierActionAgent().sendEmptyMessage(
-                            CarrierActionAgent.CARRIER_ACTION_RESET);
-                }
-                mCachedNoWakeSignalConfigs = config;
+        synchronized (mCachedWakeSignalConfigs) {
+            log("Loading carrier config: " + KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY);
+            Map<String, Set<ComponentName>> config = parseAndCache(
+                    b.getStringArray(KEY_CARRIER_APP_WAKE_SIGNAL_CONFIG_STRING_ARRAY));
+            // In some rare cases, up-to-date config could be fetched with delay and all signals
+            // have already been delivered the receivers from the default carrier config.
+            // To handle this raciness, we should notify those receivers (from old configs)
+            // and reset carrier actions. This should be done before cached Config got purged
+            // and written with the up-to-date value, Otherwise those receivers from the
+            // old config might lingers without properly clean-up.
+            if (!mCachedWakeSignalConfigs.isEmpty()
+                    && !config.equals(mCachedWakeSignalConfigs)) {
+                if (VDBG) log("carrier config changed, reset receivers from old config");
+                mPhone.getCarrierActionAgent().sendEmptyMessage(
+                        CarrierActionAgent.CARRIER_ACTION_RESET);
             }
+            mCachedWakeSignalConfigs = config;
+        }
+
+        synchronized (mCachedNoWakeSignalConfigs) {
+            log("Loading carrier config: "
+                    + KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY);
+            Map<String, Set<ComponentName>> config = parseAndCache(
+                    b.getStringArray(KEY_CARRIER_APP_NO_WAKE_SIGNAL_CONFIG_STRING_ARRAY));
+            if (!mCachedNoWakeSignalConfigs.isEmpty()
+                    && !config.equals(mCachedNoWakeSignalConfigs)) {
+                if (VDBG) log("carrier config changed, reset receivers from old config");
+                mPhone.getCarrierActionAgent().sendEmptyMessage(
+                        CarrierActionAgent.CARRIER_ACTION_RESET);
+            }
+            mCachedNoWakeSignalConfigs = config;
         }
     }
 
@@ -248,9 +264,15 @@ public class CarrierSignalAgent extends Handler {
                         }
                         String[] signals = splitStr[1].split(CARRIER_SIGNAL_DELIMITER);
                         for (String s : signals) {
-                            if (!mCarrierSignalList.contains(s)) {
-                                loge("Invalid signal name: " + s);
-                                continue;
+                            if (!VALID_CARRIER_SIGNAL_ACTIONS.contains(s)) {
+                                // It could be a legacy action in the com.android.internal.telephony
+                                // namespace. If that's the case, translate it to the new actions.
+                                if (COMPAT_ACTION_TO_NEW_MAP.containsKey(s)) {
+                                    s = COMPAT_ACTION_TO_NEW_MAP.get(s);
+                                } else {
+                                    loge("Invalid signal name: " + s);
+                                    continue;
+                                }
                             }
                             Set<ComponentName> componentList = newCachedWakeSignalConfigs.get(s);
                             if (componentList == null) {
@@ -282,7 +304,7 @@ public class CarrierSignalAgent extends Handler {
 
     /**
      * Broadcast the intents explicitly.
-     * Some sanity check will be applied before broadcasting.
+     * Some correctness checks will be applied before broadcasting.
      * - for non-wakeup(runtime) receivers, make sure the intent is not declared in their manifests
      * and apply FLAG_EXCLUDE_STOPPED_PACKAGES to avoid wake-up
      * - for wakeup(manifest) receivers, make sure there are matched receivers with registered
@@ -298,30 +320,47 @@ public class CarrierSignalAgent extends Handler {
         final PackageManager packageManager = mPhone.getContext().getPackageManager();
         for (ComponentName name : receivers) {
             Intent signal = new Intent(intent);
-            signal.setComponent(name);
+            if (wakeup) {
+                signal.setComponent(name);
+            } else {
+                // Explicit intents won't reach dynamically registered receivers -- set the package
+                // instead.
+                signal.setPackage(name.getPackageName());
+            }
 
             if (wakeup && packageManager.queryBroadcastReceivers(signal,
                     PackageManager.MATCH_DEFAULT_ONLY).isEmpty()) {
                 loge("Carrier signal receivers are configured but unavailable: "
                         + signal.getComponent());
-                return;
+                continue;
             }
             if (!wakeup && !packageManager.queryBroadcastReceivers(signal,
                     PackageManager.MATCH_DEFAULT_ONLY).isEmpty()) {
                 loge("Runtime signals shouldn't be configured in Manifest: "
                         + signal.getComponent());
-                return;
+                continue;
             }
 
-            signal.putExtra(PhoneConstants.SUBSCRIPTION_KEY, mPhone.getSubId());
+            SubscriptionManager.putSubscriptionIdExtra(signal, mPhone.getSubId());
             signal.addFlags(Intent.FLAG_RECEIVER_FOREGROUND);
             if (!wakeup) signal.setFlags(Intent.FLAG_EXCLUDE_STOPPED_PACKAGES);
 
+            Intent compatIntent = null;
             try {
-                mPhone.getContext().sendBroadcast(signal);
+                if (mPhone.getContext().getPackageManager()
+                        .getApplicationInfo(name.getPackageName(), 0).targetSdkVersion
+                        <= Build.VERSION_CODES.R) {
+                    compatIntent = createCompatIntent(signal);
+                }
+            } catch (PackageManager.NameNotFoundException e) {
+                // ignore, don't do anything special for compatibility
+            }
+            try {
+                Intent intentToSend = compatIntent == null ? signal : compatIntent;
+                mPhone.getContext().sendBroadcastAsUser(intentToSend, UserHandle.ALL);
                 if (DBG) {
-                    log("Sending signal " + signal.getAction() + ((signal.getComponent() != null)
-                            ? " to the carrier signal receiver: " + signal.getComponent() : ""));
+                    log("Sending signal " + intentToSend.getAction()
+                            + " to the carrier signal receiver: " + intentToSend.getComponent());
                 }
             } catch (ActivityNotFoundException e) {
                 loge("Send broadcast failed: " + e);
@@ -351,6 +390,56 @@ public class CarrierSignalAgent extends Handler {
                 broadcast(intent, receiverSet, NO_WAKE);
             }
         }
+    }
+
+    private static @Nullable Intent createCompatIntent(Intent original) {
+        String compatAction = NEW_ACTION_TO_COMPAT_MAP.get(original.getAction());
+        if (compatAction == null) {
+            Rlog.i(LOG_TAG, "intent action " + original.getAction() + " does not have a"
+                    + " compat alternative for component " + original.getComponent());
+            return null;
+        }
+        Intent compatIntent = new Intent(original);
+        compatIntent.setAction(compatAction);
+        for (String extraKey : original.getExtras().keySet()) {
+            switch (extraKey) {
+                case TelephonyManager.EXTRA_REDIRECTION_URL:
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_REDIRECTION_URL,
+                            original.getStringExtra(TelephonyManager.EXTRA_REDIRECTION_URL));
+                    break;
+                case TelephonyManager.EXTRA_DATA_FAIL_CAUSE:
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_ERROR_CODE,
+                            original.getIntExtra(TelephonyManager.EXTRA_DATA_FAIL_CAUSE, -1));
+                    break;
+                case TelephonyManager.EXTRA_PCO_ID:
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_PCO_ID,
+                            original.getIntExtra(TelephonyManager.EXTRA_PCO_ID, -1));
+                    break;
+                case TelephonyManager.EXTRA_PCO_VALUE:
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_PCO_VALUE,
+                            original.getByteArrayExtra(TelephonyManager.EXTRA_PCO_VALUE));
+                    break;
+                case TelephonyManager.EXTRA_DEFAULT_NETWORK_AVAILABLE:
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_DEFAULT_NETWORK_AVAILABLE,
+                            original.getBooleanExtra(
+                                    TelephonyManager.EXTRA_DEFAULT_NETWORK_AVAILABLE, false));
+                    break;
+                case TelephonyManager.EXTRA_APN_TYPE:
+                    int apnType = original.getIntExtra(TelephonyManager.EXTRA_APN_TYPE,
+                            ApnSetting.TYPE_DEFAULT);
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_APN_TYPE_INT, apnType);
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_APN_TYPE,
+                            ApnSetting.getApnTypesStringFromBitmask(apnType));
+                    break;
+                case TelephonyManager.EXTRA_APN_PROTOCOL:
+                    int apnProtocol = original.getIntExtra(TelephonyManager.EXTRA_APN_PROTOCOL, -1);
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_APN_PROTOCOL_INT, apnProtocol);
+                    compatIntent.putExtra(TelephonyIntents.EXTRA_APN_PROTOCOL,
+                            ApnSetting.getProtocolStringFromInt(apnProtocol));
+                    break;
+            }
+        }
+        return compatIntent;
     }
 
     private void log(String s) {
