@@ -61,7 +61,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         ArrayBlockingQueue<Integer> q = new ArrayBlockingQueue<Integer>(n);
         assertTrue(q.isEmpty());
         for (int i = 0; i < n; i++)
-            assertTrue(q.offer(new Integer(i)));
+            assertTrue(q.offer(Integer.valueOf(i)));
         assertFalse(q.isEmpty());
         assertEquals(0, q.remainingCapacity());
         assertEquals(n, q.size());
@@ -194,11 +194,11 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
     public void testAdd() {
         ArrayBlockingQueue q = new ArrayBlockingQueue(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            assertTrue(q.add(new Integer(i)));
+            assertTrue(q.add(Integer.valueOf(i)));
         }
         assertEquals(0, q.remainingCapacity());
         try {
-            q.add(new Integer(SIZE));
+            q.add(Integer.valueOf(SIZE));
             shouldThrow();
         } catch (IllegalStateException success) {}
     }
@@ -222,7 +222,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         ArrayBlockingQueue q = new ArrayBlockingQueue(SIZE);
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             q.addAll(Arrays.asList(ints));
             shouldThrow();
@@ -236,7 +236,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         ArrayBlockingQueue q = new ArrayBlockingQueue(1);
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             q.addAll(Arrays.asList(ints));
             shouldThrow();
@@ -250,7 +250,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         Integer[] empty = new Integer[0];
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         ArrayBlockingQueue q = new ArrayBlockingQueue(SIZE);
         assertFalse(q.addAll(Arrays.asList(empty)));
         assertTrue(q.addAll(Arrays.asList(ints)));
@@ -264,7 +264,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
     public void testPut() throws InterruptedException {
         ArrayBlockingQueue q = new ArrayBlockingQueue(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            Integer x = new Integer(i);
+            Integer x = Integer.valueOf(i);
             q.put(x);
             assertTrue(q.contains(x));
         }
@@ -527,9 +527,9 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
     public void testContains() {
         ArrayBlockingQueue q = populatedQueue(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            assertTrue(q.contains(new Integer(i)));
+            assertTrue(q.contains(Integer.valueOf(i)));
             assertEquals(i, q.poll());
-            assertFalse(q.contains(new Integer(i)));
+            assertFalse(q.contains(Integer.valueOf(i)));
         }
     }
 
@@ -558,7 +558,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         for (int i = 0; i < SIZE; ++i) {
             assertTrue(q.containsAll(p));
             assertFalse(p.containsAll(q));
-            p.add(new Integer(i));
+            p.add(Integer.valueOf(i));
         }
         assertTrue(p.containsAll(q));
     }
@@ -865,7 +865,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         assertEquals(0, q.size());
         assertEquals(SIZE, l.size());
         for (int i = 0; i < SIZE; ++i)
-            assertEquals(l.get(i), new Integer(i));
+            assertEquals(l.get(i), Integer.valueOf(i));
         q.add(zero);
         q.add(one);
         assertFalse(q.isEmpty());
@@ -876,7 +876,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         assertEquals(0, q.size());
         assertEquals(2, l.size());
         for (int i = 0; i < 2; ++i)
-            assertEquals(l.get(i), new Integer(i));
+            assertEquals(l.get(i), Integer.valueOf(i));
     }
 
     /**
@@ -886,7 +886,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         final ArrayBlockingQueue q = populatedQueue(SIZE);
         Thread t = new Thread(new CheckedRunnable() {
             public void realRun() throws InterruptedException {
-                q.put(new Integer(SIZE + 1));
+                q.put(Integer.valueOf(SIZE + 1));
             }});
 
         t.start();
@@ -894,7 +894,7 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         q.drainTo(l);
         assertTrue(l.size() >= SIZE);
         for (int i = 0; i < SIZE; ++i)
-            assertEquals(l.get(i), new Integer(i));
+            assertEquals(l.get(i), Integer.valueOf(i));
         t.join();
         assertTrue(q.size() + l.size() >= SIZE);
     }
@@ -906,14 +906,14 @@ public class ArrayBlockingQueueTest extends JSR166TestCase {
         ArrayBlockingQueue q = new ArrayBlockingQueue(SIZE * 2);
         for (int i = 0; i < SIZE + 2; ++i) {
             for (int j = 0; j < SIZE; j++)
-                assertTrue(q.offer(new Integer(j)));
+                assertTrue(q.offer(Integer.valueOf(j)));
             ArrayList l = new ArrayList();
             q.drainTo(l, i);
             int k = (i < SIZE) ? i : SIZE;
             assertEquals(k, l.size());
             assertEquals(SIZE - k, q.size());
             for (int j = 0; j < k; ++j)
-                assertEquals(l.get(j), new Integer(j));
+                assertEquals(l.get(j), Integer.valueOf(j));
             do {} while (q.poll() != null);
         }
     }
