@@ -47,9 +47,9 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
             new ConcurrentSkipListSet<Integer>();
         assertTrue(q.isEmpty());
         for (int i = n - 1; i >= 0; i -= 2)
-            assertTrue(q.add(new Integer(i)));
+            assertTrue(q.add(Integer.valueOf(i)));
         for (int i = (n & 1); i < n; i += 2)
-            assertTrue(q.add(new Integer(i)));
+            assertTrue(q.add(Integer.valueOf(i)));
         assertFalse(q.isEmpty());
         assertEquals(n, q.size());
         return q;
@@ -103,7 +103,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
     public void testConstructor5() {
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             new ConcurrentSkipListSet(Arrays.asList(ints));
             shouldThrow();
@@ -116,7 +116,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
     public void testConstructor6() {
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         ConcurrentSkipListSet q = new ConcurrentSkipListSet(Arrays.asList(ints));
         for (int i = 0; i < SIZE; ++i)
             assertEquals(ints[i], q.pollFirst());
@@ -131,7 +131,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
         assertEquals(cmp, q.comparator());
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         q.addAll(Arrays.asList(ints));
         for (int i = SIZE - 1; i >= 0; --i)
             assertEquals(ints[i], q.pollFirst());
@@ -143,9 +143,9 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
     public void testEmpty() {
         ConcurrentSkipListSet q = new ConcurrentSkipListSet();
         assertTrue(q.isEmpty());
-        q.add(new Integer(1));
+        q.add(Integer.valueOf(1));
         assertFalse(q.isEmpty());
-        q.add(new Integer(2));
+        q.add(Integer.valueOf(2));
         q.pollFirst();
         q.pollFirst();
         assertTrue(q.isEmpty());
@@ -162,7 +162,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
         }
         for (int i = 0; i < SIZE; ++i) {
             assertEquals(i, q.size());
-            q.add(new Integer(i));
+            q.add(Integer.valueOf(i));
         }
     }
 
@@ -238,7 +238,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
         ConcurrentSkipListSet q = new ConcurrentSkipListSet();
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             q.addAll(Arrays.asList(ints));
             shouldThrow();
@@ -252,7 +252,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
         Integer[] empty = new Integer[0];
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(SIZE - 1 - i);
+            ints[i] = Integer.valueOf(SIZE - 1 - i);
         ConcurrentSkipListSet q = new ConcurrentSkipListSet();
         assertFalse(q.addAll(Arrays.asList(empty)));
         assertTrue(q.addAll(Arrays.asList(ints)));
@@ -309,9 +309,9 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
     public void testContains() {
         ConcurrentSkipListSet q = populatedSet(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            assertTrue(q.contains(new Integer(i)));
+            assertTrue(q.contains(Integer.valueOf(i)));
             q.pollFirst();
-            assertFalse(q.contains(new Integer(i)));
+            assertFalse(q.contains(Integer.valueOf(i)));
         }
     }
 
@@ -323,7 +323,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
         q.clear();
         assertTrue(q.isEmpty());
         assertEquals(0, q.size());
-        q.add(new Integer(1));
+        q.add(Integer.valueOf(1));
         assertFalse(q.isEmpty());
         q.clear();
         assertTrue(q.isEmpty());
@@ -338,7 +338,7 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
         for (int i = 0; i < SIZE; ++i) {
             assertTrue(q.containsAll(p));
             assertFalse(p.containsAll(q));
-            p.add(new Integer(i));
+            p.add(Integer.valueOf(i));
         }
         assertTrue(p.containsAll(q));
     }
@@ -498,17 +498,17 @@ public class ConcurrentSkipListSetTest extends JSR166TestCase {
      */
     public void testIteratorRemove() {
         final ConcurrentSkipListSet q = new ConcurrentSkipListSet();
-        q.add(new Integer(2));
-        q.add(new Integer(1));
-        q.add(new Integer(3));
+        q.add(Integer.valueOf(2));
+        q.add(Integer.valueOf(1));
+        q.add(Integer.valueOf(3));
 
         Iterator it = q.iterator();
         it.next();
         it.remove();
 
         it = q.iterator();
-        assertEquals(it.next(), new Integer(2));
-        assertEquals(it.next(), new Integer(3));
+        assertEquals(it.next(), Integer.valueOf(2));
+        assertEquals(it.next(), Integer.valueOf(3));
         assertFalse(it.hasNext());
     }
 
