@@ -59,7 +59,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
             new LinkedBlockingDeque<Integer>(n);
         assertTrue(q.isEmpty());
         for (int i = 0; i < n; i++)
-            assertTrue(q.offer(new Integer(i)));
+            assertTrue(q.offer(Integer.valueOf(i)));
         assertFalse(q.isEmpty());
         assertEquals(0, q.remainingCapacity());
         assertEquals(n, q.size());
@@ -72,9 +72,9 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testEmpty() {
         LinkedBlockingDeque q = new LinkedBlockingDeque();
         assertTrue(q.isEmpty());
-        q.add(new Integer(1));
+        q.add(Integer.valueOf(1));
         assertFalse(q.isEmpty());
-        q.add(new Integer(2));
+        q.add(Integer.valueOf(2));
         q.removeFirst();
         q.removeFirst();
         assertTrue(q.isEmpty());
@@ -91,7 +91,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         }
         for (int i = 0; i < SIZE; ++i) {
             assertEquals(i, q.size());
-            q.add(new Integer(i));
+            q.add(Integer.valueOf(i));
         }
     }
 
@@ -122,8 +122,8 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
      */
     public void testOfferFirst() {
         LinkedBlockingDeque q = new LinkedBlockingDeque();
-        assertTrue(q.offerFirst(new Integer(0)));
-        assertTrue(q.offerFirst(new Integer(1)));
+        assertTrue(q.offerFirst(Integer.valueOf(0)));
+        assertTrue(q.offerFirst(Integer.valueOf(1)));
     }
 
     /**
@@ -131,8 +131,8 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
      */
     public void testOfferLast() {
         LinkedBlockingDeque q = new LinkedBlockingDeque();
-        assertTrue(q.offerLast(new Integer(0)));
-        assertTrue(q.offerLast(new Integer(1)));
+        assertTrue(q.offerLast(Integer.valueOf(0)));
+        assertTrue(q.offerLast(Integer.valueOf(1)));
     }
 
     /**
@@ -281,11 +281,11 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testRemoveFirstOccurrence() {
         LinkedBlockingDeque q = populatedDeque(SIZE);
         for (int i = 1; i < SIZE; i += 2) {
-            assertTrue(q.removeFirstOccurrence(new Integer(i)));
+            assertTrue(q.removeFirstOccurrence(Integer.valueOf(i)));
         }
         for (int i = 0; i < SIZE; i += 2) {
-            assertTrue(q.removeFirstOccurrence(new Integer(i)));
-            assertFalse(q.removeFirstOccurrence(new Integer(i + 1)));
+            assertTrue(q.removeFirstOccurrence(Integer.valueOf(i)));
+            assertFalse(q.removeFirstOccurrence(Integer.valueOf(i + 1)));
         }
         assertTrue(q.isEmpty());
     }
@@ -296,11 +296,11 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testRemoveLastOccurrence() {
         LinkedBlockingDeque q = populatedDeque(SIZE);
         for (int i = 1; i < SIZE; i += 2) {
-            assertTrue(q.removeLastOccurrence(new Integer(i)));
+            assertTrue(q.removeLastOccurrence(Integer.valueOf(i)));
         }
         for (int i = 0; i < SIZE; i += 2) {
-            assertTrue(q.removeLastOccurrence(new Integer(i)));
-            assertFalse(q.removeLastOccurrence(new Integer(i + 1)));
+            assertTrue(q.removeLastOccurrence(Integer.valueOf(i)));
+            assertFalse(q.removeLastOccurrence(Integer.valueOf(i + 1)));
         }
         assertTrue(q.isEmpty());
     }
@@ -441,13 +441,13 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testPush() {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            Integer x = new Integer(i);
+            Integer x = Integer.valueOf(i);
             q.push(x);
             assertEquals(x, q.peek());
         }
         assertEquals(0, q.remainingCapacity());
         try {
-            q.push(new Integer(SIZE));
+            q.push(Integer.valueOf(SIZE));
             shouldThrow();
         } catch (IllegalStateException success) {}
     }
@@ -491,10 +491,10 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testAdd() {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         for (int i = 0; i < SIZE; ++i)
-            assertTrue(q.add(new Integer(i)));
+            assertTrue(q.add(Integer.valueOf(i)));
         assertEquals(0, q.remainingCapacity());
         try {
-            q.add(new Integer(SIZE));
+            q.add(Integer.valueOf(SIZE));
             shouldThrow();
         } catch (IllegalStateException success) {}
     }
@@ -518,7 +518,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         Collection<Integer> elements = Arrays.asList(ints);
         try {
             q.addAll(elements);
@@ -533,7 +533,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE - 1);
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         Collection<Integer> elements = Arrays.asList(ints);
         try {
             q.addAll(elements);
@@ -548,7 +548,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         Integer[] empty = new Integer[0];
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         assertFalse(q.addAll(Arrays.asList(empty)));
         assertTrue(q.addAll(Arrays.asList(ints)));
@@ -562,7 +562,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testPut() throws InterruptedException {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            Integer x = new Integer(i);
+            Integer x = Integer.valueOf(i);
             q.put(x);
             assertTrue(q.contains(x));
         }
@@ -792,7 +792,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testPutFirst() throws InterruptedException {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            Integer x = new Integer(i);
+            Integer x = Integer.valueOf(i);
             q.putFirst(x);
             assertTrue(q.contains(x));
         }
@@ -1141,7 +1141,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testPutLast() throws InterruptedException {
         LinkedBlockingDeque q = new LinkedBlockingDeque(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            Integer x = new Integer(i);
+            Integer x = Integer.valueOf(i);
             q.putLast(x);
             assertTrue(q.contains(x));
         }
@@ -1419,9 +1419,9 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testContains() {
         LinkedBlockingDeque q = populatedDeque(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            assertTrue(q.contains(new Integer(i)));
+            assertTrue(q.contains(Integer.valueOf(i)));
             q.poll();
-            assertFalse(q.contains(new Integer(i)));
+            assertFalse(q.contains(Integer.valueOf(i)));
         }
     }
 
@@ -1450,7 +1450,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         for (int i = 0; i < SIZE; ++i) {
             assertTrue(q.containsAll(p));
             assertFalse(p.containsAll(q));
-            p.add(new Integer(i));
+            p.add(Integer.valueOf(i));
         }
         assertTrue(p.containsAll(q));
     }
@@ -1626,9 +1626,9 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testDescendingIteratorOrdering() {
         final LinkedBlockingDeque q = new LinkedBlockingDeque();
         for (int iters = 0; iters < 100; ++iters) {
-            q.add(new Integer(3));
-            q.add(new Integer(2));
-            q.add(new Integer(1));
+            q.add(Integer.valueOf(3));
+            q.add(Integer.valueOf(2));
+            q.add(Integer.valueOf(1));
             int k = 0;
             for (Iterator it = q.descendingIterator(); it.hasNext();) {
                 assertEquals(++k, it.next());
@@ -1647,16 +1647,16 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
     public void testDescendingIteratorRemove() {
         final LinkedBlockingDeque q = new LinkedBlockingDeque();
         for (int iters = 0; iters < 100; ++iters) {
-            q.add(new Integer(3));
-            q.add(new Integer(2));
-            q.add(new Integer(1));
+            q.add(Integer.valueOf(3));
+            q.add(Integer.valueOf(2));
+            q.add(Integer.valueOf(1));
             Iterator it = q.descendingIterator();
-            assertEquals(it.next(), new Integer(1));
+            assertEquals(it.next(), Integer.valueOf(1));
             it.remove();
-            assertEquals(it.next(), new Integer(2));
+            assertEquals(it.next(), Integer.valueOf(2));
             it = q.descendingIterator();
-            assertEquals(it.next(), new Integer(2));
-            assertEquals(it.next(), new Integer(3));
+            assertEquals(it.next(), Integer.valueOf(2));
+            assertEquals(it.next(), Integer.valueOf(3));
             it.remove();
             assertFalse(it.hasNext());
             q.remove();
@@ -1752,7 +1752,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         assertEquals(0, q.size());
         assertEquals(SIZE, l.size());
         for (int i = 0; i < SIZE; ++i)
-            assertEquals(l.get(i), new Integer(i));
+            assertEquals(l.get(i), Integer.valueOf(i));
         q.add(zero);
         q.add(one);
         assertFalse(q.isEmpty());
@@ -1763,7 +1763,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         assertEquals(0, q.size());
         assertEquals(2, l.size());
         for (int i = 0; i < 2; ++i)
-            assertEquals(l.get(i), new Integer(i));
+            assertEquals(l.get(i), Integer.valueOf(i));
     }
 
     /**
@@ -1773,7 +1773,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         final LinkedBlockingDeque q = populatedDeque(SIZE);
         Thread t = new Thread(new CheckedRunnable() {
             public void realRun() throws InterruptedException {
-                q.put(new Integer(SIZE + 1));
+                q.put(Integer.valueOf(SIZE + 1));
             }});
 
         t.start();
@@ -1781,7 +1781,7 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         q.drainTo(l);
         assertTrue(l.size() >= SIZE);
         for (int i = 0; i < SIZE; ++i)
-            assertEquals(l.get(i), new Integer(i));
+            assertEquals(l.get(i), Integer.valueOf(i));
         t.join();
         assertTrue(q.size() + l.size() >= SIZE);
     }
@@ -1793,14 +1793,14 @@ public class LinkedBlockingDequeTest extends JSR166TestCase {
         LinkedBlockingDeque q = new LinkedBlockingDeque();
         for (int i = 0; i < SIZE + 2; ++i) {
             for (int j = 0; j < SIZE; j++)
-                assertTrue(q.offer(new Integer(j)));
+                assertTrue(q.offer(Integer.valueOf(j)));
             ArrayList l = new ArrayList();
             q.drainTo(l, i);
             int k = (i < SIZE) ? i : SIZE;
             assertEquals(k, l.size());
             assertEquals(SIZE - k, q.size());
             for (int j = 0; j < k; ++j)
-                assertEquals(l.get(j), new Integer(j));
+                assertEquals(l.get(j), Integer.valueOf(j));
             do {} while (q.poll() != null);
         }
     }
