@@ -51,9 +51,9 @@ public class TreeSetTest extends JSR166TestCase {
         TreeSet<Integer> q = new TreeSet<Integer>();
         assertTrue(q.isEmpty());
         for (int i = n - 1; i >= 0; i -= 2)
-            assertTrue(q.add(new Integer(i)));
+            assertTrue(q.add(Integer.valueOf(i)));
         for (int i = (n & 1); i < n; i += 2)
-            assertTrue(q.add(new Integer(i)));
+            assertTrue(q.add(Integer.valueOf(i)));
         assertFalse(q.isEmpty());
         assertEquals(n, q.size());
         return q;
@@ -107,7 +107,7 @@ public class TreeSetTest extends JSR166TestCase {
     public void testConstructor5() {
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             new TreeSet(Arrays.asList(ints));
             shouldThrow();
@@ -120,7 +120,7 @@ public class TreeSetTest extends JSR166TestCase {
     public void testConstructor6() {
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         TreeSet q = new TreeSet(Arrays.asList(ints));
         for (int i = 0; i < SIZE; ++i)
             assertEquals(ints[i], q.pollFirst());
@@ -135,7 +135,7 @@ public class TreeSetTest extends JSR166TestCase {
         assertEquals(cmp, q.comparator());
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         q.addAll(Arrays.asList(ints));
         for (int i = SIZE - 1; i >= 0; --i)
             assertEquals(ints[i], q.pollFirst());
@@ -147,9 +147,9 @@ public class TreeSetTest extends JSR166TestCase {
     public void testEmpty() {
         TreeSet q = new TreeSet();
         assertTrue(q.isEmpty());
-        q.add(new Integer(1));
+        q.add(Integer.valueOf(1));
         assertFalse(q.isEmpty());
-        q.add(new Integer(2));
+        q.add(Integer.valueOf(2));
         q.pollFirst();
         q.pollFirst();
         assertTrue(q.isEmpty());
@@ -166,7 +166,7 @@ public class TreeSetTest extends JSR166TestCase {
         }
         for (int i = 0; i < SIZE; ++i) {
             assertEquals(i, q.size());
-            q.add(new Integer(i));
+            q.add(Integer.valueOf(i));
         }
     }
 
@@ -242,7 +242,7 @@ public class TreeSetTest extends JSR166TestCase {
         TreeSet q = new TreeSet();
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             q.addAll(Arrays.asList(ints));
             shouldThrow();
@@ -256,12 +256,12 @@ public class TreeSetTest extends JSR166TestCase {
         Integer[] empty = new Integer[0];
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(SIZE - 1 - i);
+            ints[i] = Integer.valueOf(SIZE - 1 - i);
         TreeSet q = new TreeSet();
         assertFalse(q.addAll(Arrays.asList(empty)));
         assertTrue(q.addAll(Arrays.asList(ints)));
         for (int i = 0; i < SIZE; ++i)
-            assertEquals(new Integer(i), q.pollFirst());
+            assertEquals(Integer.valueOf(i), q.pollFirst());
     }
 
     /**
@@ -313,9 +313,9 @@ public class TreeSetTest extends JSR166TestCase {
     public void testContains() {
         TreeSet q = populatedSet(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            assertTrue(q.contains(new Integer(i)));
+            assertTrue(q.contains(Integer.valueOf(i)));
             q.pollFirst();
-            assertFalse(q.contains(new Integer(i)));
+            assertFalse(q.contains(Integer.valueOf(i)));
         }
     }
 
@@ -327,7 +327,7 @@ public class TreeSetTest extends JSR166TestCase {
         q.clear();
         assertTrue(q.isEmpty());
         assertEquals(0, q.size());
-        q.add(new Integer(1));
+        q.add(Integer.valueOf(1));
         assertFalse(q.isEmpty());
         q.clear();
         assertTrue(q.isEmpty());
@@ -342,7 +342,7 @@ public class TreeSetTest extends JSR166TestCase {
         for (int i = 0; i < SIZE; ++i) {
             assertTrue(q.containsAll(p));
             assertFalse(p.containsAll(q));
-            p.add(new Integer(i));
+            p.add(Integer.valueOf(i));
         }
         assertTrue(p.containsAll(q));
     }
@@ -501,17 +501,17 @@ public class TreeSetTest extends JSR166TestCase {
      */
     public void testIteratorRemove() {
         final TreeSet q = new TreeSet();
-        q.add(new Integer(2));
-        q.add(new Integer(1));
-        q.add(new Integer(3));
+        q.add(Integer.valueOf(2));
+        q.add(Integer.valueOf(1));
+        q.add(Integer.valueOf(3));
 
         Iterator it = q.iterator();
         it.next();
         it.remove();
 
         it = q.iterator();
-        assertEquals(it.next(), new Integer(2));
-        assertEquals(it.next(), new Integer(3));
+        assertEquals(it.next(), Integer.valueOf(2));
+        assertEquals(it.next(), Integer.valueOf(3));
         assertFalse(it.hasNext());
     }
 
